--- a/src/pug/home.pug
+++ b/src/pug/home.pug
@@ -2,20 +2,6 @@ extends template/site
 block title
     title Home | Static Web Starter Kit
 block main
-    .container
-        h1 Static Web Starter Kit
-        h3 PUG, SCSS, POSTCSS, ES6, ESLINT, STYLELINT, WEBPACK
-        -
-            var logos = [
-                    'pugjs.svg',
-                    'sass.png',
-                    'postcss.png',
-                    'babel.png',
-                    'es6.png',
-                    'eslint.png',
-                    'stylelint.png',
-                    'webpack.svg'
-            ];
-        ul.logo-list
-            each logo in logos
-                li.logo-item: img(src="images/"+logo)
+    p#text JavaScript Exercises - w3resource
+    div
+        button#jsstyle Style
