--- a/src/pug/home.pug
+++ b/src/pug/home.pug
@@ -2,11 +2,6 @@ extends template/site
 block title
     title Home | Static Web Starter Kit
 block main
-    form#form1
-        | First name:
-        input(type="text" name="fname" value="David")
-        br
-        | Last name:
-        input(type="text" name="lname" value="Beckham")
-        br
-        input(type="submit" value="Submit")
+    p
+        a#w3r(type="text/html" hreflang="en-us" rel="nofollow" target="_self" href="https://www.w3resource.com/") w3resource
+    button Click here to get  attributes value
