[https://www.w3resource.com/javascript-exercises/javascript-dom-exercises.php] Exercise 07

--- a/src/pug/home.pug
+++ b/src/pug/home.pug
@@ -3,14 +3,5 @@ block title
     title Home | Static Web Starter Kit
 block main
     table#myTable(border="1")
-        tr
-            td Row1 cell1
-            td Row1 cell2
-        tr
-            td Row2 cell1
-            td Row2 cell2
-        tr
-            td Row3 cell1
-            td Row3 cell2
-    form
-        input(type="button" value="Change content")
+        form
+            input(type="button" value="Create the table")
