[https://www.w3resource.com/javascript-exercises/javascript-dom-exercises.php] Exercise 09

--- a/src/pug/home.pug
+++ b/src/pug/home.pug
@@ -3,9 +3,10 @@ block title
     title Home | Static Web Starter Kit
 block main
     form
-        select#colorSelect
+        | Select your favorite Color :
+        select#mySelect
             option Red
             option Green
+            option Blue
             option White
-            option Black
-        input(type="button" value="Select and Remove")
+        input(type="button" value="Count and Output all items")
